--- a/templates/rexeonapp/Navbar.html
+++ b/templates/rexeonapp/Navbar.html
@@ -33,7 +33,7 @@
                 <a class="nav-link navbar-light-active-color" aria-current="page"  href="/about">ABOUT</a>
               </li>
               <li class="nav-item p-1">
-                <a class="nav-link  navbar-light-active-color" aria-current="page" href="#">OUR BLOG</a>
+                <a class="nav-link  navbar-light-active-color" aria-current="page" href="/blog">OUR BLOG</a>
               </li>
               <li class="nav-item p-1">
                 <a class="nav-link" aria-current="page" href="#">OUR GROUP</a>
