--- a/templates/rexeonapp/footer.html
+++ b/templates/rexeonapp/footer.html
@@ -44,12 +44,12 @@
           <div class="col-sm">
             <h3 class="fw-bold text-decoration-underline">Quick Links</h3>
             <ul class="ul">
-            <a href=""> <li>Home</li></a> 
-            <a href=""> <li>About</li></a> 
-            <a href=""> <li>Our Blog</li></a> 
-             <a href=""> <li>Our Services</li></a>
-             <a href=""> <li>Career</li></a>
-              <a href=""><li>Contact</li></a>
+            <a href="/"> <li>Home</li></a> 
+            <a href="/about"> <li>About</li></a> 
+            <a href="/blog"> <li>Our Blog</li></a> 
+             <a href="/services"> <li>Our Services</li></a>
+             <a href="/career"> <li>Career</li></a>
+              <a href="/contact"><li>Contact</li></a>
             </ul>
           </div>
         </div>
