--- a/static/css/about.css
+++ b/static/css/about.css
@@ -3,3 +3,23 @@
     color: #0dcaf0;
     text-decoration: underline;
 }
+
+.list{
+    margin-left: 10%;
+    list-style-type: none;
+}
+
+.aboutmain{
+    font-family: 'Roboto Slab', serif;
+    margin-bottom: 5%;
+}
+.card-subtitle{
+    font-weight: bolder !important;
+}
+.card{
+    border-radius: 40px !important;
+    font-family: 'Roboto Slab', serif;
+}
+.card:hover{
+    transform: scale(1.1);
+}
