complete blog group and services

--- a/templates/rexeonapp/Navbar.html
+++ b/templates/rexeonapp/Navbar.html
@@ -36,16 +36,16 @@
                 <a class="nav-link  navbar-light-active-color" aria-current="page" href="/blog">OUR BLOG</a>
               </li>
               <li class="nav-item p-1">
-                <a class="nav-link" aria-current="page" href="#">OUR GROUP</a>
+                <a class="nav-link" aria-current="page" href="/group">OUR GROUP</a>
               </li>
               <li class="nav-item p-1">
-                <a class="nav-link" aria-current="page" href="#">SERVICES</a>
+                <a class="nav-link" aria-current="page" href="/services">SERVICES</a>
               </li>
               <li class="nav-item p-1">
-                <a class="nav-link" href="#">CAREER</a>
+                <a class="nav-link" href="/career">CAREER</a>
               </li>
               <li class="nav-item p-1">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
           </div>
