--- a/templates/rexeonapp/blog.html
+++ b/templates/rexeonapp/blog.html
@@ -11,14 +11,63 @@
     <h2 class="text-center offer mt-5">OUR BlOG</h2>
     <p class="text-center card-subtitle pb-4">Check Out Our Latest Blog Post</p>
     <div class="container">
-        <div class="row">
-          <div class="col">
-            1 of 2
+        <div class="row m-3">
+          <div class="col-sm m-2">
+            <div class="contain">
+                <img src="https://www.kokilabenhospital.com/blog/wp-content/uploads/2019/06/Brain-Tumor-Day.png" alt="Avatar" class="image" width="100%">
+                <p class="text-center blog-name">World Brain Tumor Day</p>
+                <div class="middle">
+                  <div class="text">
+                      <h5 class="card-subtitle">World Brain-Tumor-Day</h5>
+                      <p>BY- TEAM REXEON-SOLUTIONS</p>
+                      <a href="">View Post</a>
+                  </div>
+                </div>
+              </div>
           </div>
-          <div class="col">
-            2 of 2
+          <div class="col-sm m-2">
+            <div class="contain">
+                <img src="https://sourcingjournal.com/wp-content/uploads/2017/02/raceforwater_pollution_christophelaunayweb-e1487876549354.jpg" alt="Avatar" class="image" width="100%">
+                <p class="text-center blog-name">MARINE POLLUTION</p>
+                <div class="middle">
+                  <div class="text">
+                      <h5 class="card-subtitle">Marine Pollution</h5>
+                      <p>BY- TEAM REXEON-SOLUTIONS</p>
+                      <a href="">View Post</a>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
+
+        <div class="row m-3">
+            <div class="col-sm m-2">
+              <div class="contain">
+                  <img src="https://www.kokilabenhospital.com/blog/wp-content/uploads/2019/06/Brain-Tumor-Day.png" alt="Avatar" class="image" width="100%">
+                  <p class="text-center blog-name">World Brain Tumor Day</p>
+                  <div class="middle">
+                    <div class="text">
+                        <h5 class="card-subtitle">World Brain-Tumor-Day</h5>
+                        <p>BY- TEAM REXEON-SOLUTIONS</p>
+                        <a href="">View Post</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-sm m-2">
+              <div class="contain">
+                  <img src="https://sourcingjournal.com/wp-content/uploads/2017/02/raceforwater_pollution_christophelaunayweb-e1487876549354.jpg" alt="Avatar" class="image" width="100%">
+                  <p class="text-center blog-name">MARINE POLLUTION</p>
+                  <div class="middle">
+                    <div class="text">
+                        <h5 class="card-subtitle">Marine Pollution</h5>
+                        <p>BY- TEAM REXEON-SOLUTIONS</p>
+                        <a href="">View Post</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
         </div>
  </section>
 </div>
