--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -9,3 +9,47 @@
 .blogmain{
     font-family: 'Roboto Slab', serif;
 }
+.contain {
+    position: relative;
+   
+  }
+  
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    height: 20rem;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .contain:hover .image {
+    /* opacity: 0.7; */
+    filter: brightness(30%);
+  }
+  
+  .contain:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    /* background-color: #04AA6D; */
+    color: white;
+    font-size: 16px;
+    /* padding: 16px 32px; */
+  }
+  .blog-name{
+      background-color: #0dcaf0;
+  }
