--- a/templates/rexeonapp/footer.html
+++ b/templates/rexeonapp/footer.html
@@ -30,10 +30,10 @@
           </div>
           <div class="col-sm">
               <h4 class="fw-bold text-decoration-underline">Social Media</h4>
-              <a href=""><img src="https://img.icons8.com/windows/30/ffffff/twitter.png" class="p-2 icon"/></a>
-              <a href=""><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" class="p-2 icon"/></a>
-              <a href=""><img src="https://img.icons8.com/ios-glyphs/32/ffffff/facebook.png" class="p-2 icon"/></a>
-              <a href=""><img src="https://img.icons8.com/ios-glyphs/30/ffffff/linkedin.png" class="p-2 icon"/></a>
+              <a href="https://twitter.com/RexeonL"><img src="https://img.icons8.com/windows/30/ffffff/twitter.png" class="p-2 icon"/></a>
+              <a href="https://www.instagram.com/rexeonsolutions?r=nametag"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" class="p-2 icon"/></a>
+              <a href="https://www.facebook.com/RexeonSolutions/"><img src="https://img.icons8.com/ios-glyphs/32/ffffff/facebook.png" class="p-2 icon"/></a>
+              <a href="https://www.linkedin.com/company/rexeonsolutions"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/linkedin.png" class="p-2 icon"/></a>
               <h4 class="fw-bold text-decoration-underline">Contact Us</h4>
                <a href="">+91 9661480713</a> <br>
                <a href="mailto:rexeonspl@gmail.com">rexeonspl@gmail.com</a>
@@ -52,7 +52,10 @@
               <a href="/contact"><li>Contact</li></a>
             </ul>
           </div>
+          <p class="text-center fw-bold text-decoration-underline p-3">Copyright @2020 All rights reserved</p>
+
         </div>
+
       </div>
     </div>
   </body>
