--- a/templates/rexeonapp/services.html
+++ b/templates/rexeonapp/services.html
@@ -10,7 +10,7 @@
     <div class="row m-3">
       <div class="col-sm m-2">
         <img
-          src="https://rexeonsolutions.in/testing.jpg"
+          src="https://4.imimg.com/data4/UF/QP/MY-9770085/food-testing-analysis-services-500x500.jpg"
           alt=""
           width="100%"
           height="100%"
@@ -18,19 +18,19 @@
       </div>
       <div class="col-sm m-2 detail text-center">
         <h2>Testing Services</h2>
-        <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">View Details</a>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#testingModal" role="button">View Details</a>
       </div>
     </div>
 
     <div class="row m-3">
       <div class="col-sm m-2 detail text-center">
         <h2>Certifications and Trainings Provided By Us</h2>
-        <a class="btn btn-info" href="#" role="button">View Details</a>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#certificationModal" role="button">View Details</a>
       </div>
 
       <div class="col-sm m-2">
         <img
-          src="https://rexeonsolutions.in/Quality.JPG"
+          src="https://cdn.educba.com/academy/wp-content/uploads/2017/06/certification-training-program.jpg"
           alt=""
           width="100%"
           height="100%"
@@ -50,17 +50,113 @@
 
       <div class="col-sm m-2 detail text-center">
         <h2>Web and app Development</h2>
-        <a class="btn btn-info" href="#" role="button">View Details</a>
+        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#webModal" role="button">View Details</a>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-    <div class="modal-dialog modal-fullscreen">
-     
+
+<!-- Testing Modal -->
+<div class="modal fade" id="testingModal" tabindex="-1" aria-labelledby="testingModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title text-primary text-capitalize text-decoration-underline fw-bold" id="exampleModalLabel">Testing Services</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Testing services are mandatory nowadays with growing concern for quality among consumers. Consumers are quite skeptical about the quality of products they are purchasing. Even growing health concern has demanded a more significant inspection of food items. <br>
+          Established regulatory norms prevent the violation of quality promised to consumers, primarily related to food items. The Food Safety and Standards Authority of India (FSSAI) has been established under Food Safety and Standards Act, 2006, which ensures the availability of safe and wholesome food for human consumption. <br>
+          Adulteration is common nowadays hence food testing has become a mandate in India. It is therefore crucial to maintain a standard quality of food to ensure a healthy and safe product to consumers. <br>
+          Testing is also required to assess the quality of fuels which are used in machines. A high-quality oil increases the longevity of machines and reduces maintenance cost.
+          Environmental concern is also growing which demands the test of pollutants emitted by companies. <br>
+          Testing gives an authenticity check which ensures the quality of contents in a product. On the one hand, it ensures that consumers don’t become victim of economic fraud whereas on the other hand, it enhances the reputation of the company.</p>
+          <h4 class="text-primary text-decoration-underline">Testing Services provided by us:</h4>
+          <h6 class="fw-bold text-decoration-underline">Food Testing:</h6>
+          <p>Testing of fruits, vegetables, milk and diary products, dry fruits, bakery products, cooked, packaged foods and many other types of food testing are provided by us. Food is tested by performing various analysis which may be microbiological, contaminant, nutritional or parameter based in nature.</p>
+          <h6 class="fw-bold text-decoration-underline">FuelTesting:</h6>
+          <p>RSPL provides a wide range of services to the metal, minerals, ores and chemical sectors. We offer inspection, supervision, sampling, testing services for:</p>
+          <ul>
+            <li>Minerals, Ores and Concentrates (Iron ore – Lumps & Pellets, Manganese Ore, Chrome Ores etc.)</li>
+            <li>Energy Minerals (Coal, Cock, Met Cock etc.)</li>
+            <li> Industrial Minerals (Bentonite, Gypsum, Salt, Soda Ash, Talc, Zeolite, etc.)</li>
+            <li>Raw materials for cement, steel and fertilizer industries</li>
+          </ul>
+          <h6 class="fw-bold text-decoration-underline">Soil Testing</h6>
+          <p>The nutrient content of the soil is checked. Nutrients, which are checked, are:</p>
+          <ul>
+            <li>Major nutrients: Nitrogen, Phosphorus and potassium.</li>
+            <li>Secondary nutrients: Sulfur, Calcium and magnesium.</li>
+            <li>Minor nutrients: Molybdenum, Iron, Manganese, Copper, Zinc, Boron, chlorine etc.</li>
+          </ul>
+          <h6 class="fw-bold text-decoration-underline">Water Analysis:</h6>
+          <p>Analysis of waste water, packaged drinking water, packaged natural mineral water, drinking water, processed water, distilled water is provided by us as per WHO guidelines. Tests are performed to measure dissolved oxygen, turbidity, total solids such as silt, clay, plankton, various industrial wastes and sewage.</p>
+          <ul>
+            <li>
+              Ambient Air Testing
+            </li>
+            <li>Noise Testing</li>
+            <li>Fugitive Emission Testing</li>
+            <li>Pollution Testing</li>
+          </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
-
+</div>
+<!-- certification modal -->
+<div class="modal fade" id="certificationModal" tabindex="-1" aria-labelledby="certificationModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title text-primary text-capitalize text-decoration-underline fw-bold" id="exampleModalLabel">Certifications and Trainings Provided By Us</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h5 class="fw-bold text-decoration-underline">Certification:</h5>
+        <p>We assist our clients with all the documents needed for having a certification on ISO, NABL, NABCB. We help small and medium enterprises in getting their FSSAI,CSMS (Safety Star Rating)and BIS registrations and license. <br>
+          Each certification has its own set of rules and regulations which allows a business entity to conduct its business in certain region. USA may not approve ISO 13485 but approve anything else. On the other hand, ISO 13485 is approved by Europe, Australia, Japan, Canada or South Korea. This kind of information can be provided by us. <br>
+          Our greenfield projects handle all the certification needs our clients might require while starting a new project. As an example, an Agro-farm may need certification and registration in order to export their products. Our client may not have the information or time to handle those certification process which we can take care on their behalf. Similarly, a plant might be installing a new process which would improve the quality of their products. They can check and claim the efficiency of this new process by a relevant ISO certification. We can assist them in getting such certifications. <br>
+          We also provide training facilities required by our client’s employees in order to make them capable for such certifications and registrations.</p>
+          <h5 class="fw-bold text-decoration-underline">Occupational Safety & Working Condition Management Training:</h5>
+         <p>As an industry grows every assets of that industry grows with it which consists its machineries too. The more machines an industry will have the more will the hazards grow exponentially. To have a good working condition every industry need a well-versed system where everyone should know about various types of hazards that can happen. <br>
+          On the basis of Directive Principles , the Government of India , Ministry of Labor & Employment, had declared the NPSHEW on 20th Feb, 2009. The purpose of this National Policy is to establish a preventive safety and health culture in the country through elimination of the incidents of work related injuries, diseases, fatalities, disasters and to enhance the well being of employees in all the sectors of economic activity in the country. <br>
+          Occupational Safety & Working Conditions is relatively neglected area by Indian industry and because of this while India has approximately 3% share of global manufacturing, India has almost 30% share the industrial fatalities globally. Even Steel industry in India lags its global peers on this parameter and has patchy safety performance with many major incidents involving multiple fatalities. Most of the companies actually do not even have a proper safety management system comparable to global best practices. Though most of large ISPs are OHSAS- 18001 certified, never the less their contribution in workplace fatalities is not insignificant. Contractor workers which accounts for nearly half of the manpower deployed in steel industry are more susceptible to incidents as they are unskilled, not so educated and unaware of the hazardous work environment. However, in-spite of all efforts, their share in fatalities continues to be higher on year to year basis. Safety is still being managed in isolation and not as an essential / integral part of overall business decisions, culture & performance in most of the organizations. Efforts for benchmarking by taking lessons from past failures & good practices from peer industry are limited to few organizations only.</p>
+          <p>The different types of hazards are-</p>
+          <ul>
+            <li>Physical hazards.</li>
+            <li>Chemical hazards.</li>
+            <li>Radiation hazards.</li>
+            <li>Ergonomic hazards.</li>
+            <li>Psychological hazards</li>
+          </ul>
+          <p>There are many aspects of these and Rexeon Solutions have came up with a well versed theoretical training module where the employees will be taught all about these various and various ways to prevent those things from happening and make the workspace a better and safe place to work in.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Web Modal -->
+<div class="modal fade" id="webModal" tabindex="-1" aria-labelledby="webModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title text-primary text-capitalize text-decoration-underline fw-bold" id="exampleModalLabel">Web and app Development</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>As we provide business solutions to each of the agencies who we partner with, it also consists of internet solutions. An era has now come where everything we want to buy or a business we want to trust, we first confirm a business details online and search for whether the business has any website where we can know everything about that company whom we are going to trust. Every business now requires a good CONTENT MANAGEMENT SYSTEM whether be it website or a mobile app. So we, Rexeon Solutions, as our name came up with this solution too at a very affordable range. We provide websites as well as apps designed beautifully as well as having a professional look by our developers who have ample of expertise in IT field. So what are you waiting for? Join your business with ours at a very affordable range and grow your unique business dream into reality.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 
 {%include 'rexeonapp/footer.html'%} {%endblock%}
