--- a/static/css/apply.css
+++ b/static/css/apply.css
@@ -1,5 +1,19 @@
-.groupmain{
+.blogmain{
     font-family: 'Roboto Slab', serif;
+}
+.input_field{
+    /* width: 20rem; */
+    width: 80%;
+    /* border-color: cadetblue !important; */
+    border: none;
+    border-bottom: 2px solid cadetblue;
+    border-radius: 20px;
+}
+.input_field:focus {
+    /* border: none !important; */
+    outline: none;
+    border-bottom: 2px solid cadetblue;
+    border-radius: 20px;
 }
 .gp{
     font-size: 5rem;
@@ -9,21 +23,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-shadow: 4px 0px 5px black;
   }
-  .card-subtitle{
-    font-weight: bolder !important;
-    color: cadetblue;
-    text-decoration: underline;
-    font-size: 1.3rem;
-}
-.card{
-    border-radius: 40px !important;
-    font-family: 'Roboto Slab', serif;
-}
-.card:hover{
-    transform: scale(1.1);
-}
-
-.fadeInLeftBig {
+  .fadeInLeftBig {
     -webkit-animation-name: fadeInLeftBig;
     animation-name: fadeInLeftBig;
     -webkit-animation-duration: 3s;
@@ -54,4 +54,4 @@
     -webkit-transform: none;
     transform: none;
     }
-    } 
+    }
