--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,3 +1,42 @@
 .contactmain{
     font-family: 'Roboto Slab', serif;
+    /* overflow-x: hidden; */
 }
+.input_field{
+    width: 90%;
+    border: none;
+    border-bottom: 2px solid cadetblue;
+    border-radius: 20px;
+}
+.input_field:focus {
+    outline: none;
+    border-bottom: 2px solid cadetblue;
+    border-radius: 20px;
+}
+.mapouter {
+    position: relative;
+    text-align: right;
+    width: 100%;
+    height: 30rem;
+  }
+  .gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    width: 100%;
+    height: 30rem;
+  }
+  .gmap_iframe {
+    width: 100% !important;
+    height: 30rem !important;
+  }
+  .cardc{
+    background-color: #0dcaf0 !important;
+}
+
+    .card{
+        border-radius: 40px !important;
+        font-family: 'Roboto Slab', serif;
+    }
+    .card:hover{
+        transform: scale(1.1);
+    }
