--- a/templates/rexeonapp/Navbar.html
+++ b/templates/rexeonapp/Navbar.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{%static "css/Navbar.css"%}">
+    <link rel="icon" href="{%static "images/logo.png"%}">
     {% block css %}{% endblock %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -14,13 +15,13 @@
       crossorigin="anonymous"
     />
     
-    <title>Document</title>
+    <title>Rexeon Solutions</title>
   </head>
  
   <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
         <div class="container">
-          <a class="navbar-brand" href="#"> <img src="{%static "images/logo.png"%}" alt="" class="img-responsive d-inline-block" width="100" height="80"> <span> Rexeon Solutions Pvt. Ltd.</span></a>
+          <a class="navbar-brand" href="/"> <img src="{%static "images/logo.png"%}" alt="" class="img-responsive d-inline-block" width="100" height="80"> <span> Rexeon Solutions Pvt. Ltd.</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
