--- a/templates/rexeonapp/about.html
+++ b/templates/rexeonapp/about.html
@@ -8,7 +8,7 @@
       <div class="row justify-content-md-center">
         <div class="col-md-auto p-4">
           <img
-            src="https://rexeonsolutions.in/about.jpg"
+            src="https://www.nuffoodsspectrum.asia/uploads/articles/1-885.jpg"
             alt=""
             width="100%"
             height="100%"
@@ -224,5 +224,16 @@
   </div>
 </div>
 </section>
+
+<section>
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-lg-10">
+        <iframe style='width:100%; height:30rem' src='https://online.pubhtml5.com/mwxk/ytqo/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
+      </div>
+    </div>
+  </div>
+</section>
+
 </div>
 {%include 'rexeonapp/footer.html'%} {%endblock%}
