--- a/templates/rexeonapp/career.html
+++ b/templates/rexeonapp/career.html
@@ -15,7 +15,7 @@
        <p>
         At the heart of RSPL are people who run this organization. It is our endeavor to develop our people continuously by focusing on their career development by providing them adequate training in a positive work environment.
         If you are a young, talented individual with a personal value system who enjoys challenges, has a passion to excel and can fit into our organizational culture, you could be a part of the growth journey at RSPL.</p>
-        <p class="text-center"><b>Anyone interested to join us click here :</b>  <a class="btn btn-primary" href="#" role="button">Apply</a> </p>
+        <p class="text-center"><b>Anyone interested to join us click here :</b>  <a class="btn btn-primary" href="/apply" role="button">Apply</a> </p>
         <h2 class="m-4 fw-bold text-decoration-underline">
           Why choose Rexeon?
           </h2>
