--- a/templates/rexeonapp/home.html
+++ b/templates/rexeonapp/home.html
@@ -7,13 +7,14 @@
  {% block child_block%}
 <section>
   <div class="jumbotron text-white jumbotron-image shadow p-4">
-    <div class="text-center text p-3">
+    <div class="text-center text p-3 fadeInLeft">
       <h1 class="mb-2">Our collaboration ensures your Reputation</h1>
 
       <h5 class="mb-4">Testing services and Certifications all at one place</h5>
 
-      <a class="btn btn-outline-info m-4 button p-2"> Learn More </a>
-      <a class="btn btn-outline-info m-4 button p-2" > Contact Us </a>
+      <a class="btn btn-outline-info m-4 button p-2" href="/about"> Learn More </a>
+      <a class="btn btn-outline-info m-4 button p-2" href="/contact"> Contact Us </a>
+      <!-- <a class="btn btn-outline-info m-4 button p-2" href="https://wa.me/9661480713"> Click to chat </a> -->
     </div>
   </div>
 </section>
@@ -177,4 +178,3 @@
 </section>
 {%include 'rexeonapp/footer.html'%}
 {%endblock%}
-
