--- a/templates/rexeonapp/career.html
+++ b/templates/rexeonapp/career.html
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="row justify-content-md-center m-2">
             <div class="col-lg-8">
-                <img src="https://rexeonsolutions.in/career.jpg" alt="" width="100%" class="cimage">
+                <img src="https://www.masterbrain.me/wp-content/uploads/2019/04/csm_Career_Depositphotos_132018554_xl-2015_d02c35d189.jpg" alt="" width="100%" class="cimage">
             </div>
           </div>
        <p>
