--- a/templates/rexeonapp/footer.html
+++ b/templates/rexeonapp/footer.html
@@ -47,6 +47,7 @@
             <a href="/"> <li>Home</li></a> 
             <a href="/about"> <li>About</li></a> 
             <a href="/blog"> <li>Our Blog</li></a> 
+            <a href="/group"> <li>Our Group</li></a> 
              <a href="/services"> <li>Our Services</li></a>
              <a href="/career"> <li>Career</li></a>
               <a href="/contact"><li>Contact</li></a>
